# otelemuye

./: .gitignore  README.md  atelewoorg.jsonl  pyproject.toml  run.sh  scrapy.cfg
config/: atelewo.yaml  legitng.yaml  premiumtimes.yaml  tuko.yaml
data/: atelewoorg.jsonl
notebooks/: example.ipynb
src/legit/: cli.py  item.py  process.py  settings.py
src/legit/middlewares/: __init__.py  http.py  selenium.py
src/legit/pipelines/: __init__.py  _base.py  file.py  mongo.py
src/legit/spiders/: __init__.py  crawler.py
src/otelemuye/: __init__.py  cli.py  item.py  process.py  settings.py
src/otelemuye/middlewares/: __init__.py  http.py  selenium.py
src/otelemuye/pipelines/: file.py  mongo.py
src/otelemuye/spiders/: README.md  __init__.py  _base.py  atelewo.py  legitng.py  premiumtimes.py  tuko.py
templates/next_page_navigation/: cookiecutter.json
templates/next_page_navigation/{{cookiecutter.spider_name}}/: {{cookiecutter.spider_name|lower}}.py  {{cookiecutter.spider_name}}.py  {{cookiecutter.spider_name}}.yaml
templates/sitemap/{{cookiecutter.spider_name}}/: {{cookiecutter.spider_name}}.py  {{cookiecutter.spider_name}}.yaml
templates/start_url/{{cookiecutter.spider_name}}/: {{cookiecutter.spider_name|lower}}.py  {{cookiecutter.spider_name|lower}}.yaml
