[build-system]
requires = ["setuptools>=64.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "otelemuye"
description = "Stealthy Scraper for News Websites"
readme = { file = "README.md", content-type = "text/markdown" }
maintainers = [
    { name = "Akintunde 'theyorubayesian' Oladipo", email = "akin.o.oladipo@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    'beautifulsoup4==4.11.1',
    'pymongo==4.3.3',
    'scrapy==2.8.0',
    'selenium==4.8.2',
    'pyyaml==6.0',
    'cookiecutter==2.1.1'
]
dynamic = [
  "version",
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
license = { text = "Apache-2.0" }
[project.optional-dependencies]
dev = [
    'ipykernel==6.19.4',
]

[project.urls]
Homepage = "https://github.com/theyorubayesian/otelemuye"

[project.scripts]
otelemuye = "otelemuye.cli:main"